# securevault

./: .gitignore  Cargo.toml  README.md  create_icon.py  test_vault.rs
SecureVault.app/Contents/: Info.plist
SecureVault.app/Contents/Resources/: SecureVault.icns
apps/desktop/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/ui/: use-dark-mode.tsx  use-toast.tsx
crates/core-crypto/: Cargo.toml
crates/core-crypto/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/vault-store/: Cargo.toml
crates/vault-store/src/: lib.rs
