[package]
name = "core-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
rand = "0.8"
zeroize = "1"
hkdf = "0.12"
aes-gcm = { version = "0.10", features = ["aes"] }
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
hex = "0.4"
