[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
platform = { path = "../../../crates/platform" }
core-crypto = { path = "../../../crates/core-crypto" }
vault-store = { path = "../../../crates/vault-store" }

[build-dependencies]
tauri-build = { version = "2" }
